[gd_scene load_steps=9 format=3 uid="uid://b0rehk21rlla8"]

[ext_resource type="Texture2D" uid="uid://dnnguylq67on5" path="res://Art/Paramecium-Sheet.png" id="1_50867"]
[ext_resource type="Script" path="res://paramecium/small_paramecium.gd" id="1_nhgr4"]
[ext_resource type="PackedScene" uid="uid://4s52p52c380u" path="res://paramecium/ray.tscn" id="3_7h7gn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_siak5"]
size = Vector2(9, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_rai3h"]
radius = 3.0

[sub_resource type="Animation" id="Animation_kw440"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("G/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_50867")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("G/Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("G/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("G/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ku1js"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("G/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_50867")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("G/Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("G/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("G/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyltl"]
_data = {
"RESET": SubResource("Animation_kw440"),
"idle": SubResource("Animation_ku1js")
}

[node name="smallParamecium" type="CharacterBody2D" groups=["Paramecium"]]
script = ExtResource("1_nhgr4")

[node name="G" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="G"]
texture = ExtResource("1_50867")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 128, 8)

[node name="BodyBox" type="Area2D" parent="G"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="G/BodyBox"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_siak5")

[node name="WallChecker" type="RayCast2D" parent="G"]
target_position = Vector2(10, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rai3h")

[node name="Ray" parent="." instance=ExtResource("3_7h7gn")]
ray_length = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iyltl")
}

[connection signal="area_entered" from="G/BodyBox" to="." method="_on_body_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
